trans.h: Add declarations for gfor_fndecl_si_kind and gfor_fndecl_sr_kind.
	* trans.h: Add declarations for gfor_fndecl_si_kind and
	gfor_fndecl_sr_kind.
	* trans-decl.c (g95_build_intrinsic_function_decls): Build them.
	* trans-intrinsic.c (g95_conv_intrinsic_si_kind): New function.
	(g95_conv_intrinsic_sr_kind): New function.
	(g95_conv_intrinsic_function): Add SELECTED_INT_KIND and
	SELECTED_REAL_KIND.

	* intrinsics/selected_kind.f90: New file.
	* Makefile.am: Add it.
	* Makefile.in: regenerate.

	* gfortran.fortran-torture/execute/intrisic_si_kind.f90: New test.
	* gfortran.fortran-torture/execute/intrisic_sr_kind.f90: New test.

From-SVN: r71604

--- a/libgfortran/Makefile.am
+++ b/libgfortran/Makefile.am
@@ -43,6 +43,7 @@ intrinsics/string_intrinsics.c \
 intrinsics/random.c \
 intrinsics/reshape_generic.c \
 intrinsics/reshape_packed.c \
+intrinsics/selected_kind.f90 \
 intrinsics/transpose_generic.c \
 intrinsics/unpack_generic.c \
 runtime/in_pack_generic.c \
